# leetcode-solutions

./: .copilotignore  Cargo.toml  package-lock.json
src/easy/1-two-sum/python/: main.py
src/easy/1-two-sum/rust/: mod.rs
src/easy/1-two-sum/typescript/: main.ts
src/easy/1422-maximum-score-after-splitting/: readme.md  solution.md
src/easy/1422-maximum-score-after-splitting/rust/: mod.rs
src/easy/1544-make-the-string-great/rust/: mod.rs
src/easy/1758-minimum-changes-to-make-alternating/: solution.md
src/easy/1758-minimum-changes-to-make-alternating/python/: main.py
src/easy/1758-minimum-changes-to-make-alternating/rust/: mod.rs
src/easy/1758-minimum-changes-to-make-alternating/typescript/: main.ts
src/easy/1897-redistribute-characters/rust/: mod.rs
src/easy/20-valid-parentheses/rust/: mod.rs
src/easy/217-contains-duplicate/python/: main.py
src/easy/217-contains-duplicate/rust/: mod.rs
src/easy/217-contains-duplicate/typescript/: main.ts
src/easy/242-valid-anagram/python/: main.py
src/easy/242-valid-anagram/rust/: mod.rs
src/easy/242-valid-anagram/typescript/: main.ts
src/easy/455-assign-cookies/rust/: mod.rs
src/easy/872-leaf-similar-trees/rust/: mod.rs
src/easy/938-range-sum-of-bst/rust/: mod.rs
src/hard/1235-maximum-profit-in-job-scheduling/rust/: mod.rs
src/hard/992-subarrays-with-k-different-integers/rust/: mod.rs
src/medium/128-longest-consecutive-sequence/rust/: mod.rs
src/medium/1578-minimum-time-to-make-rope-colorful/rust/: mod.rs
src/medium/1637-widest-vertical-area-between-two-points/rust/: mod.rs
src/medium/2125-number-of-laser-beams/rust/: mod.rs
src/medium/238-product-of-array-except-self/rust/: mod.rs
src/medium/271-encode-and-decode-strings/python/: main.py
src/medium/271-encode-and-decode-strings/rust/: mod.rs
src/medium/287-find-the-duplicate-number/rust/: mod.rs
src/medium/2870-minimum-number-of-operations-to-make-array-empty/rust/: mod.rs
src/medium/347-top-k-frequent-elements/python/: main.py
src/medium/347-top-k-frequent-elements/rust/: mod.rs
src/medium/347-top-k-frequent-elements/typescript/: main.ts
src/medium/36-valid-sudoku/rust/: mod.rs
src/medium/49-group-anagrams/python/: main.py
src/medium/49-group-anagrams/rust/: mod.rs
src/medium/49-group-anagrams/typescript/: main.ts
src/medium/91-decode-ways/python/: main.py
src/medium/91-decode-ways/rust/: mod.rs
