[package]
name = "leetcode-solutions"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "217-contains-duplicate"
path = "src/easy/217-contains-duplicate/rust/mod.rs"

[[bin]]
name = "242-valid-anagram"
path = "src/easy/242-valid-anagram/rust/mod.rs"

[[bin]]
name = "1-two-sum"
path = "src/easy/1-two-sum/rust/mod.rs"

[[bin]]
name = '49-group-anagrams'
path = 'src/medium/49-group-anagrams/rust/mod.rs'

[[bin]]
name = '347-top-k-frequent-elements'
path = 'src/medium/347-top-k-frequent-elements/rust/mod.rs'

[[bin]]
name = '1637-widest-vertical-area-between-two-points'
path = 'src/medium/1637-widest-vertical-area-between-two-points/rust/mod.rs'

[[bin]]
name = '1422-maximum-score-after-splitting'
path = 'src/easy/1422-maximum-score-after-splitting/rust/mod.rs'

[[bin]]
name = '1758-minimum-changes-to-make-alternating'
path = 'src/easy/1758-minimum-changes-to-make-alternating/rust/mod.rs'

[[bin]]
name = '91-decode-ways'
path = 'src/medium/91-decode-ways/rust/mod.rs'

[[bin]]
name = '238-product-of-array-except-self'
path = 'src/medium/238-product-of-array-except-self/rust/mod.rs'

[[bin]]
name = '1578-minimum-time-to-make-rope-colorful'
path = 'src/medium/1578-minimum-time-to-make-rope-colorful/rust/mod.rs'

[[bin]]
name = '20-valid-parentheses'
path = 'src/easy/20-valid-parentheses/rust/mod.rs'

[[bin]]
name = '1897-redistribute-characters-to-make-all-strings-equal'
path = 'src/easy/1897-redistribute-characters/rust/mod.rs'

[[bin]]
name = '455-assign-cookies'
path = 'src/easy/455-assign-cookies/rust/mod.rs'

[[bin]]
name = '2125-number-of-laser-beams-in-a-bank'
path = 'src/medium/2125-number-of-laser-beams/rust/mod.rs'

[[bin]]
name = '2870-minimum-number-of-operations-to-make-array-empty'
path = 'src/medium/2870-minimum-number-of-operations-to-make-array-empty/rust/mod.rs'

[[bin]]
name = '1235-maximum-profit-in-job-scheduling'
path = 'src/hard/1235-maximum-profit-in-job-scheduling/rust/mod.rs'

[[bin]]
name = '938-range-sum-of-bst'
path = 'src/easy/938-range-sum-of-bst/rust/mod.rs'

[[bin]]
name = '36-valid-sudoku'
path = 'src/medium/36-valid-sudoku/rust/mod.rs'

[[bin]]
name = '271-encode-and-decode-strings'
path = 'src/medium/271-encode-and-decode-strings/rust/mod.rs'

[[bin]]
name = '128-longest-consecutive-sequence'
path = 'src/medium/128-longest-consecutive-sequence/rust/mod.rs'

[[bin]]
name = '872-leaf-similar-trees'
path = 'src/easy/872-leaf-similar-trees/rust/mod.rs'

[[bin]]
name = '287-find-the-duplicate'
path = 'src/medium/287-find-the-duplicate-number/rust/mod.rs'

[[bin]]
name = '992-subarrays-with-k-different-integers'
path = 'src/hard/992-subarrays-with-k-different-integers/rust/mod.rs'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
